@@ -1,5 +1,8 @@
 2005-07-19  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_menus_set_state): Fix the Calendar menu item
+	sensitivity.
+
 	* log_repaint.c (logview_draw_log_lines): Fix the display of
 	one-line logs.
 
